--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    cursor: url('assets/nyan_cat_cursor_normal.png'), auto;
+    cursor: url('./assets/nyan_cat_cursor_normal.png'), auto;
 }
 
 body {
@@ -25,7 +25,7 @@ body {
 .header {
     text-align: center;
     margin-bottom: 30px;
-    background: url('assets/nyan_cat.gif');
+    background: url('./assets/nyan_cat.gif');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -248,7 +248,7 @@ body {
     text-align: center;
     line-height: 1.3;
     transition: none;
-    cursor: url('/assets/nyan_cat_cursor_pointer.png'), pointer;
+    cursor: url('./assets/nyan_cat_cursor_pointer.png'), pointer;
 }
 
 .answer-btn:hover {
@@ -366,7 +366,7 @@ body {
     margin: 8px;
     transition: none;
     line-height: 1.2;
-    cursor: url('/assets/nyan_cat_cursor_pointer.png'), pointer;
+    cursor: url('./assets/nyan_cat_cursor_pointer.png'), pointer;
 }
 
 .btn:hover {
